--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,19 @@
 header{
     background-color: azure;
-    padding: 40px;
+    /* padding: 40px; */
+    display: flex;
+}
+
+header img{
+    display: inline;
+    margin-top: 50pt;
+    margin-left: 30px;
+    margin-right: 15px;
 }
 
 header h1{
     color: rgb(102, 2, 102);
+    font-size: 40pt;
 }
 
 
