--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ h1{
     margin-top: 50px;
 }
 
-div{
+button{
     background-color: white;
     color: rgb(186, 2, 2);
     border: black solid 4px;
