--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,10 @@ ul{
     font-size: 14pt;
 }
 
+#chartContainer{
+    margin-top: 40px;
+}
+
 footer{
     background-color: azure;
     align-items: center;
